--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
+    <title>Design Agency - Beautiful & Functional Designs</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap" rel="stylesheet">
     
 </head>
 <body>
@@ -15,10 +18,10 @@
         <a href="#" class="logo">Design</a>
         <nav class="menu">
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#service">Service</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
 
@@ -33,17 +36,17 @@
     <!-- Mobile Menu -->
     <nav class="mobile-menu" id="mobileMenu">
         <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#service">Service</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
 
     <main class="home" id="home">
         <div class="hero-content">
-            <h1>The Design Agency</h1>
-            <p>Creating stunning designs for your home.</p>
+            <h1>Welcome to our Design Agency</h1>
+            <p>We create beautiful and functional designs for your business.</p>
         </div>
 
         <div class="images">
@@ -95,20 +98,6 @@
         const mobileLinks = document.querySelectorAll(".mobile-menu a");
         mobileLinks.forEach(link => {
             link.addEventListener("click", toggleMobileMenu);
-        });
-
-        // Smooth scrolling for anchor links
-        document.querySelectorAll("a[href^='#']").forEach(anchor => {
-            anchor.addEventListener("click", function (e) {
-                e.preventDefault();
-                const target = document.querySelector(this.getAttribute("href"));
-                if (target) {
-                    target.scrollIntoView({
-                        behavior: "smooth",
-                        block: "start"
-                    });
-                }
-            });
         });
     </script>
 </body>
